--- a/tatraja/src/slideshow.css
+++ b/tatraja/src/slideshow.css
@@ -55,3 +55,23 @@
   transform: rotateY(300deg) translateZ(250px);
   background: #8c6239;
 }
+
+.next, .prev {
+  color: #444;
+  position: absolute;
+  top: 6rem;
+  padding: 1em 2em;
+  cursor: pointer;
+  background: #CCC;
+  border-radius: 5px;
+  border-top: 1px solid #FFF;
+  box-shadow: 0 5px 0 #999;
+  transition: box-shadow 0.1s, top 0.1s;
+}
+.next:hover, .prev:hover { color: #000; }
+.next:active, .prev:active {
+  top: 5em;
+  box-shadow: 0 1px 0 #999;
+}
+.next { right: 15em; }
+.prev { left: 15em; }
