--- a/tatraja/src/slideshow.css
+++ b/tatraja/src/slideshow.css
@@ -1,77 +1,28 @@
-.mainbox {
 
-  margin: 0 auto;
-  width: 250px;
-  height: 200px;
-  position: relative;
-  perspective: 1000px;
-  display: block;
+
+.header-section {
+  margin: 100px auto 0;
 }
 
-.carousel {
+svg {
+
   overflow: visible;
-  height: 100%;
-  width: 100%;
-  position: absolute;
-  transform-style: preserve-3d;
-  transition: transform 1s;
+  margin-top: 60vh;
 }
 
-.item {
-  display: block;
-  position: absolute;
-  background: #000;
-  width: 250px;
-  height: 200px;
-  line-height: 200px;
-  font-size: 5em;
-  text-align: center;
-  color: #FFF;
-  opacity: 0.95;
-  border-radius: 10px;
+.ball {
+  fill: white;
+  visibility: hidden;
 }
 
-.a {
-  transform: rotateY(0deg) translateZ(250px);
-  background: #ed1c24;
+.line {
+  fill: none;
+  stroke: white;
+  stroke-width: 2px; 
 }
-.b {
-  transform: rotateY(60deg) translateZ(250px);
-  background: #0072bc;
+text {
+  fill: white;
+  font-size: 15px;
+  font-family: "Signika Negative", sans-serif; 
+  visibility: hidden;
 }
-.c {
-  transform: rotateY(120deg) translateZ(250px);
-  background: #39b54a;
-}
-.d {
-  transform: rotateY(180deg) translateZ(250px);
-  background: #f26522;
-}
-.e {
-  transform: rotateY(240deg) translateZ(250px);
-  background: #630460;
-} 
-.f {
-  transform: rotateY(300deg) translateZ(250px);
-  background: #8c6239;
-}
-
-.next, .prev {
-  color: #444;
-  position: absolute;
-  top: 6rem;
-  padding: 1em 2em;
-  cursor: pointer;
-  background: #CCC;
-  border-radius: 5px;
-  border-top: 1px solid #FFF;
-  box-shadow: 0 5px 0 #999;
-  transition: box-shadow 0.1s, top 0.1s;
-}
-.next:hover, .prev:hover { color: #000; }
-.next:active, .prev:active {
-  top: 5em;
-  box-shadow: 0 1px 0 #999;
-}
-.next { right: 15em; }
-.prev { left: 15em; }
