--- a/tatraja/src/App.css
+++ b/tatraja/src/App.css
@@ -4,3 +4,6 @@
     rgba(240, 46, 170, 0.1) 20px 20px, rgba(240, 46, 170, 0.05) 25px 25px;
 }
 
+.lightShadow{
+    box-shadow: rgba(17, 17, 26, 0.05) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 0px 8px;
+}
