--- a/tatraja/src/App.css
+++ b/tatraja/src/App.css
@@ -1,9 +1,13 @@
 .neonShadow {
-    box-shadow: rgba(233, 211, 225, 0.4) 5px 5px, 
-    rgba(240, 46, 170, 0.3) 10px 10px, rgba(240, 46, 170, 0.2) 15px 15px, 
-    rgba(240, 46, 170, 0.1) 20px 20px, rgba(240, 46, 170, 0.05) 25px 25px;
+    box-shadow: rgba(206, 63, 153, 0.4) 5px 5px 3px, 
+    rgba(185, 27, 172, 0.3) 10px 10px 3px, rgba(185, 46, 240, 0.2) 15px 15px 3px, 
+    rgba(98, 46, 240, 0.1) 20px 20px 3px, rgba(46, 240, 149, 0.05) 25px 25px 3px;
 }
 
 .lightShadow{
-    box-shadow: rgba(17, 17, 26, 0.05) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 0px 8px;
+    border-top: 10px solid #ffffee;
+    border-right: 10px solid #ffffee;
+    border-bottom: 30px solid #ffffee;
+    border-left: 10px solid hsl(60, 100%, 97%);
+    box-shadow: 5px 2px 5px rgb(255, 255, 0), 10px 10px 10px rgba(201, 28, 201, 0.692), 15px 10px 10px rgba(0, 255, 0, 0.479);
 }
