--- a/tatraja/src/Hero.css
+++ b/tatraja/src/Hero.css
@@ -19,6 +19,7 @@
 
 .heading {
   transform: translateZ(-50px) scale(5);
+  
 }
 
 .cloud {
@@ -27,10 +28,10 @@
   }
   
   .midground {
-    transform: translateZ(-5px) scale(1.2);
+    transform: translateZ(-5px) scale(1.6);
     left: 5em;
-    top: 70%;
-    
+    top: 80%;
+
   }
 
   .foreground {
@@ -42,7 +43,7 @@
   .midground,
   .foreground{
   position: absolute;
-  width: 100%;
+  width: 110%;
   object-fit: cover;
   z-index: -1;
 }
@@ -60,6 +61,24 @@
   display: none;
 }
 
+
+@media screen and (max-width: 1250px) {
+
+  .midground {
+    top: 90%;
+  }
+
+}
+
+@media screen and (max-width: 950px) {
+
+  .midground {
+    transform: translateZ(-5px) scale(1.6);
+    top: 95%;
+  }
+
+}
+
 @media screen and (max-width: 639px) {
   .wrapper {
     height: 100vh;
@@ -68,14 +87,15 @@
 
   
   .midground {
-    transform: translateZ(-5px) scale(1.5);
+    transform: translateZ(-2px) scale(1.3);
     left: 2em;
-    top: 90%;
+    top: 100%;
+    justify-self: end;
   }
 
   .foreground {
     transform: translateZ(0px) scale(1);
-    top: 90%;
+    top: 100%;
     justify-self: end;
   }
   .cloud {
@@ -85,21 +105,4 @@
     position: absolute;
   }
   
-}
-
-@media screen and (max-width: 1250px) {
-
-  .midground {
-    top: 80%;
-  }
-
-}
-
-@media screen and (max-width: 950px) {
-
-  .midground {
-    transform: translateZ(-5px) scale(1.5);
-    top: 90%;
-  }
-
 }
