--- a/tatraja/src/Hero.css
+++ b/tatraja/src/Hero.css
@@ -97,42 +97,39 @@
 
   .midground {
     transform: translateZ(-5px) scale(1.6);
-    top: 95%;
+    top: 105%;
   }
 
   .cont {
-    height: 5em;
-    bottom: -4.5em;
+    height: 10em;
+    bottom: -9.5em;
    }
 
 }
 
 @media screen and (max-width: 639px) {
   .wrapper {
-    height: 100vh;
-    perspective: 10px;
+    background-image: url('./svg/hero/mobile.svg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position-x: center;  
   }
 
-  
+  .heading {
+    transform: translateZ(0px) scale(1);
+    font-size: 36px;
+  }
 
   
   .midground {
-    transform: translateZ(-2px) scale(1.3);
-    left: 2em;
-    top: 100%;
-    justify-self: end;
+   display: none;
   }
 
   .foreground {
-    transform: translateZ(0px) scale(1);
-    top: 100%;
-    justify-self: end;
+display: none;
   }
   .cloud {
-    transform: translateZ(-10px) scale(2);
-    width: 150%;
-    top: 0;
-    position: absolute;
+display: none;
   }
   
 }
