--- a/tatraja/src/index.css
+++ b/tatraja/src/index.css
@@ -17,3 +17,23 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.neonShadow {
+    box-shadow: rgba(206, 63, 153, 0.4) 5px 5px 3px, 
+    rgba(185, 27, 172, 0.3) 10px 10px 3px, rgba(185, 46, 240, 0.2) 15px 15px 3px, 
+    rgba(98, 46, 240, 0.1) 20px 20px 3px, rgba(46, 240, 149, 0.05) 25px 25px 3px;
+
+}
+
+.lightShadow{
+    border-top: 10px solid #ffffee;
+    border-right: 10px solid #ffffee;
+    border-bottom: 30px solid #ffffee;
+    border-left: 10px solid hsl(60, 100%, 97%);
+    box-shadow: 5px 2px 5px rgb(255, 255, 0), 10px 10px 10px rgba(201, 28, 201, 0.692), 15px 10px 10px rgba(0, 255, 0, 0.479);
+}
+
+.calcSvg {
+    width: calc(100% + 1.3px);
+}
